# meama-prmtr

./: .env.example  .gitignore  CAMPAIGNS_LOGIC.md  CLAUDE.md  Makefile  Meama Command - Glass.html  PORTFOLIOS_README.md  PORTFOLIO_AUDIT.md  PORTFOLIO_LOGIC.md  README.md  backend_run.log.err  db-report-campaigns.md  db-report.md  meama-prmtr-site.html  requirements.txt  vercel.json
api/: index.py
backend/: apply_and_verify.py  bible_audit.py  bible_join_audit.py  pyproject.toml  sku_map_audit.py  verify_exclusion.py
backend/app/: __init__.py  business_rules.py  config.py  deps.py  main.py
backend/app/jobs/: __init__.py  alert_runner.py  claude_scoring.py  geoip_resolver.py  meta_sync.py  nightly_metrics.py  winback_trigger.py
backend/app/routers/: __init__.py  actions.py  ads.py  alerts.py  campaigns.py  customers.py  kpi.py  marketing.py  overview.py  portfolios.py  products.py  reports.py  sessions.py  social.py  social_kpis.py  stock.py
backend/app/schemas/: __init__.py  actions.py  ads.py  alerts.py  campaigns.py  common.py  customers.py  overview.py  portfolios.py  products.py  reports.py  sessions.py  social.py  social_kpis.py  stock.py
backend/app/services/: __init__.py  alert_engine.py  cache.py  catalog.py  claude_client.py  meta_api.py  omnisend.py  social.py  social_kpis.py  telegram.py
backend/tests/: test_health.py  test_promo_calculator.py
docs/: performance-loading.md  promo-calculator-spec.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+183 files in other folders)
