[project]
name = "meama-prmtr-backend"
version = "0.1.0"
description = "MEAMA PRMTR — FastAPI backend (CRM for Meama Georgia, e-commerce + brand stores)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "supabase>=2.6",
    "anthropic>=0.40",
    "langgraph>=0.2",
    "httpx>=0.27",
    "pandas>=2.2",
    "duckdb>=1.0",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
    "maxminddb>=2.0",
]

# NOTE: deliberately NO scikit-learn / xgboost / hdbscan. See CLAUDE.md §NO-ML RULE.

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008", "B905"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
